fixed links in image and style sheets

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/about-styles.css">
+    <link rel="stylesheet" href="about-styles.css">
     <title>About Me</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         About Me
     </div>
     <div class="im">
-    <img src="/PXL_20211106_015031756.jpg" height="400" width="300px"   alt="headshot"></div>
+    <img src="PXL_20211106_015031756.jpg" height="400" width="300px"   alt="headshot"></div>
     <div class="Par1">
         Hi. My Name is Omar Usmani. I am a student at Austin Coding Academy. I am taking this class to have a change of pace.
     </div>
